--- a/src/main/resources/com/cain/green/javafxlogindashboard/layouts/login-screen.fxml
+++ b/src/main/resources/com/cain/green/javafxlogindashboard/layouts/login-screen.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.utsa.cs3443.gfj947_lab4.LoginScreenController">
+            fx:controller="com.cain.green.javafxlogindashboard.LoginScreenController">
 
     <center>
         <VBox alignment="CENTER" spacing="12">
